--- a/src/App.css
+++ b/src/App.css
@@ -5,9 +5,7 @@
 
 .App {
   position: relative;
-  height: 100vh;
-  background-image: url("https://media.istockphoto.com/id/1300036753/photo/falling-antibiotics-healthcare-background.jpg?s=612x612&w=0&k=20&c=oquxJiLqE33ePw2qML9UtKJgyYUqjkLFwxT84Pr-WPk=");
-  background-size: cover;
+  /* height: 100vh; */
 
   background-color: rgba(0, 0, 0, 0.3);
 }
