--- a/src/styles/Login.css
+++ b/src/styles/Login.css
@@ -1,8 +1,10 @@
-.container {
+.container2 {
   display: flex;
   align-items: center;
   justify-content: center;
   height: 100vh;
+  background-image: url("https://media.istockphoto.com/id/1300036753/photo/falling-antibiotics-healthcare-background.jpg?s=612x612&w=0&k=20&c=oquxJiLqE33ePw2qML9UtKJgyYUqjkLFwxT84Pr-WPk=");
+  background-size: cover;
 }
 
 .login-container {
