--- a/src/styles/Navbar.css
+++ b/src/styles/Navbar.css
@@ -11,6 +11,8 @@
   height: 60px;
   /* background-color: #ffffff; */
   position: relative;
+  background-image: url("https://media.istockphoto.com/id/1300036753/photo/falling-antibiotics-healthcare-background.jpg?s=612x612&w=0&k=20&c=oquxJiLqE33ePw2qML9UtKJgyYUqjkLFwxT84Pr-WPk=");
+  background-size: cover;
 }
 
 .logo {
